Add bigg example, close #2

--- a/README.qmd
+++ b/README.qmd
@@ -34,4 +34,27 @@ output = gpd.read_file("output.geojson")
 output.plot()
 ```
 
+# Large example
+
+A large example plus benchmark is shown below:
+
+```{r}
+#| eval: false
+# list.files()
+cycle_routes_london = pct::get_pct_routes_fast("london")
+sf::write_sf(cycle_routes_london, "cycle_routes_london.geojson")
+zip("cycle_routes_london.zip", "cycle_routes_london.geojson")
+system("gh release upload v0 cycle_routes_london.zip")
+```
+
+```{r}
+#| eval: false
+cycle_routes_london = geojsonsf::geojson_sf("cycle_routes_london.geojson")
+names(cycle_routes_london)
+system.time({
+  rnet = overline(cycle_routes_london, attrib = "foot")
+})
+
+```
+
 # References
