--- a/README.qmd
+++ b/README.qmd
@@ -10,6 +10,8 @@ Overline is a function that takes overlapping linestrings and converts them into
 ```{r, message=FALSE}
 library(sf)
 library(stplanr)
+library(tidyverse)
+library(tmap)
 sl = routes_fast_sf[2:3, 0]
 sl$n = 1:2
 plot(sl)
@@ -23,15 +25,44 @@ The function has been implemented in the [`overline()` function](https://docs.ro
 
 In Python, the input and outputs can be visualised as follows:
 
-```{python}
+```python
 import geopandas as gpd
 input = gpd.read_file("input.geojson")
 input.plot()
 ```
 
-```{python}
+```python
 output = gpd.read_file("output.geojson")
 output.plot()
+```
+![](README_files/figure-commonmark/unnamed-chunk-3-3.png)
+
+
+# Example with road names
+
+The example below takes routes at the segment level and calculates average gradient for each segment. Road names are NOT currently implemented in `overline()` in R.
+
+```{r}
+sl_desire_lines = stplanr::flowlines_sf[2:3, ]
+qtm(sl_desire_lines) +
+  qtm(sl)
+route_segments_minimal = stplanr::route(
+  l = sl_desire_lines,
+  route_fun = cyclestreets::journey
+  )
+names(route_segments_minimal)
+tm_shape(route_segments_minimal) +
+  tm_lines("name")
+rnet_from_cyclestreets = overline(
+  route_segments_minimal,
+  attrib = c("All", "gradient_smooth", "quietness"),
+  fun = c(sum = sum, mean = mean)
+  )
+rnet_from_cyclestreets = rnet_from_cyclestreets %>% 
+  transmute(All = All_sum, Gradient = gradient_smooth_mean, Quietness = quietness_mean)
+plot(rnet_from_cyclestreets)
+sf::write_sf(route_segments_minimal, "route_segments_minimal.geojson", delete_dsn = TRUE)
+sf::write_sf(rnet_from_cyclestreets, "rnet_from_cyclestreets.geojson", delete_dsn = TRUE)
 ```
 
 # Large example
@@ -47,8 +78,8 @@ zip("cycle_routes_london.zip", "cycle_routes_london.geojson")
 system("gh release upload v0 cycle_routes_london.zip")
 ```
 
-```{r}
-#| eval: true
+```{r, cache=TRUE}
+#| eval: false
 system.time({
   cycle_routes_london = geojsonsf::geojson_sf("cycle_routes_london.geojson")
   names(cycle_routes_london)
@@ -57,5 +88,6 @@ system.time({
 # sf::write_sf(rnet, "rnet_london.geojson")
 # system("gh release upload v0 rnet_london.geojson")
 ```
+The operation took around 2 minutes.
 
 # References
