Tidy up and add new input dataset (#16)

--- a/README.qmd
+++ b/README.qmd
@@ -5,35 +5,46 @@ bibliography: references.bib
 
 # overline
 
-Overline is a function that takes overlapping linestrings and converts them into a route network [@morgan2020] as illustrated in a minimal reproducible example below.
+Overline is a function that takes overlapping linestrings and converts them into a route network [@morgan2020] as illustrated in a minimal reproducible example created with [ATIP](https://github.com/acteng/atip/).
 
-```{r, message=FALSE}
-library(sf)
-library(stplanr)
+The input is a dataset in which some segments overlap:
+
+```{r, message=FALSE, echo=FALSE}
 library(tidyverse)
 library(tmap)
-sl = routes_fast_sf[2:3, 0]
-sl$n = 1:2
-plot(sl)
-rnet = overline(sl, attrib = "n")
-plot(rnet)
-sf::write_sf(sl, "minimal-example-input.geojson", delete_dsn = TRUE)
-sf::write_sf(rnet, "minimal-example-output.geojson", delete_dsn = TRUE)
+library(stplanr)
+layers = sf::st_layers("test-data/minimal_2_lines.txt")
+minimal_2_lines = sf::st_read("test-data/minimal_2_lines.txt", layer = layers[[1]])
+minimal_2_lines = minimal_2_lines %>% 
+  transmute(value = c(2, 1), name = c("A", "B"))
+sf::write_sf(minimal_2_lines, "input.geojson", delete_dsn = TRUE)
+tm_shape(minimal_2_lines) +
+  tm_lines("name", palette = "Set1", lwd = "value", scale = 9)
 ```
 
-The function has been implemented in the [`overline()` function](https://docs.ropensci.org/stplanr/reference/overline.html) in the R package `stplanr`. The function works fine for city sized datasets but for national datasets is slow, buggy and not feature complete, as it does not retain OSM IDs. This repo provides a place to discuss and develop example code to solve this problem.
+The output is a dataset in which the overlapping segments have been combined:
+
+```{r, message=FALSE, echo=FALSE}
+minimal_2_rnet = overline(minimal_2_lines, attrib = "value")
+tm_shape(minimal_2_rnet) +
+  tm_lines("value", palette = "Set1", lwd = "value", scale = 15)
+sf::write_sf(minimal_2_rnet, "output.geojson", delete_dsn = TRUE)
+```
+
+The functionality has been implemented in the [`overline()` function](https://docs.ropensci.org/stplanr/reference/overline.html) in the R package `stplanr`. The function works fine for city sized datasets but for national datasets is slow, buggy and not feature complete, as it does not retain OSM IDs. This repo provides a place to discuss and develop example code to solve this problem.
 
 In Python, the input and outputs can be visualised as follows:
 
-```python
+```{python}
 import geopandas as gpd
 input = gpd.read_file("input.geojson")
-input.plot()
+# Plot with colour by value:
+input.plot(column="value")
 ```
 
-```python
+```{python}
 output = gpd.read_file("output.geojson")
-output.plot()
+output.plot(column="value")
 ```
 ![](README_files/figure-commonmark/unnamed-chunk-3-3.png)
 
@@ -44,8 +55,8 @@ The example below takes routes at the segment level and calculates average gradi
 
 ```{r}
 sl_desire_lines = stplanr::flowlines_sf[2:3, ]
-qtm(sl_desire_lines) +
-  qtm(sl)
+# qtm(sl_desire_lines) +
+#   qtm(sl)
 route_segments_minimal = stplanr::route(
   l = sl_desire_lines,
   route_fun = cyclestreets::journey
