--- a/README.qmd
+++ b/README.qmd
@@ -46,14 +46,12 @@ input.plot(column="value")
 output = gpd.read_file("output.geojson")
 output.plot(column="value")
 ```
-![](README_files/figure-commonmark/unnamed-chunk-3-3.png)
-
 
 # Example with road names
 
 The example below takes routes at the segment level and calculates average gradient for each segment. Road names are NOT currently implemented in `overline()` in R.
 
-```{r}
+```{r rnet_from_cyclestreets, message=FALSE, echo=FALSE}
 sl_desire_lines = stplanr::flowlines_sf[2:3, ]
 # qtm(sl_desire_lines) +
 #   qtm(sl)
@@ -61,9 +59,9 @@ route_segments_minimal = stplanr::route(
   l = sl_desire_lines,
   route_fun = cyclestreets::journey
   )
-names(route_segments_minimal)
-tm_shape(route_segments_minimal) +
-  tm_lines("name")
+# names(route_segments_minimal)
+route_segments_minimal = route_segments_minimal %>% 
+  transmute(All = All, name = name, gradient_smooth = gradient_smooth, quietness = quietness)
 rnet_from_cyclestreets = overline(
   route_segments_minimal,
   attrib = c("All", "gradient_smooth", "quietness"),
@@ -71,9 +69,15 @@ rnet_from_cyclestreets = overline(
   )
 rnet_from_cyclestreets = rnet_from_cyclestreets %>% 
   transmute(All = All_sum, Gradient = gradient_smooth_mean, Quietness = quietness_mean)
-plot(rnet_from_cyclestreets)
 sf::write_sf(route_segments_minimal, "route_segments_minimal.geojson", delete_dsn = TRUE)
 sf::write_sf(rnet_from_cyclestreets, "rnet_from_cyclestreets.geojson", delete_dsn = TRUE)
+m1 = tm_shape(route_segments_minimal) +
+  tm_lines("name", lwd = "All", palette = "Set1", scale = 15) +
+  tm_layout(legend.outside = TRUE)
+m2 = tm_shape(rnet_from_cyclestreets) +
+  tm_lines(lwd = "All", palette = "viridis", scale = 20) +
+  tm_layout(legend.outside = TRUE)
+tmap_arrange(m1, m2)
 ```
 
 # Large example
@@ -82,6 +86,7 @@ A large example plus benchmark is shown below:
 
 ```{r}
 #| eval: false
+#| echo: false
 # list.files()
 cycle_routes_london = pct::get_pct_routes_fast("london")
 sf::write_sf(cycle_routes_london, "cycle_routes_london.geojson")
